Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2
-
Fix Version/s: 10.2.7
-
Component/s: Data Definition - Alter Table, Storage Engine - MyISAM
-
Labels:
Description
The test case added in
MDEV-12389 ADD CHECK leaves an orphaned .par file
fails in an unexpected way in 10.2.
For InnoDB, the statement
ALTER TABLE t1 ADD CHECK(b IN (0,1));
|
fails as expected, because the column contains the values 0 and 10. However, MyISAM accepts the invalid constraint and only enforces it on subsequent DML operations.
Attachments
Issue Links
- relates to
-
MDEV-12389 ADD CHECK leaves an orphaned .par file
-
- Closed
-