MDEV-12923 MyISAM allows CHECK constraint violation in ALTER TABLE

use correct type for Alter_inplace_info flags.